# native-platform-experiments

./: LICENSE  README.md
01_standard_c/: dice.c
02_posix/: Makefile  dice.c
03_gnome/: README.md  aarch64.flatpak  com.arcanenibble.Dice.json  meson.build  x86_64.flatpak
03_gnome/data/: com.arcanenibble.Dice.desktop.in  com.arcanenibble.Dice.gschema.xml  com.arcanenibble.Dice.metainfo.xml.in  meson.build
03_gnome/data/icons/: meson.build
03_gnome/po/: POTFILES  gnome-dice.pot  meson.build  zh.po
03_gnome/src/: custom-dice-dialog.c  custom-dice-dialog.h  custom-dice-dialog.ui  gnome-dice-application.c  gnome-dice-application.h  gnome-dice-window.c  gnome-dice-window.h  gnome-dice-window.ui  gnome-dice.gresource.xml  main.c  meson.build
03_gnome/src/gtk/: help-overlay.ui
04_kde/: CMakeLists.txt  aarch64.flatpak  com.arcanenibble.KDice.desktop  com.arcanenibble.KDice.json  i18nmerge.sh
04_kde/po/: CMakeLists.txt  template.pot  zh.po
04_kde/src/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
05_winui/: App.xaml  App.xaml.cpp  App.xaml.h  DemoDice.sln  DemoDice.vcxproj  DemoDice.vcxproj.filters  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  app.manifest  packages.config  pch.h  readme.txt
05_winui/Strings/en-US/: Resources.resw
05_winui/Strings/zh-CN/: Resources.resw
06_macos/Demo Dice.app/Contents/: Info.plist
06_macos/Demo Dice.app/Contents/MacOS/: Demo Dice
06_macos/Demo Dice.app/Contents/Resources/zh-Hans.lproj/: Localizable.strings
06_macos/Demo Dice.app/Contents/_CodeSignature/: CodeResources
06_macos/DemoDice/: ContentView.swift  DemoDiceApp.swift  MacStackNavigation.swift  MenuCommands.swift
06_macos/DemoDice.xcodeproj/: project.pbxproj
06_macos/DemoDice.xcodeproj/xcshareddata/xcschemes/: DemoDice.xcscheme
06_macos/DemoDice/zh-Hans.lproj/: Localizable.strings
07_android/: settings.gradle.kts
07_android/app/: build.gradle.kts
07_android/app/src/main/: AndroidManifest.xml
07_android/gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
